--- a/.github/workflows/intergrate.yml
+++ b/.github/workflows/intergrate.yml
@@ -3,6 +3,9 @@ on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
       - name: Checkout 🛎️
@@ -20,13 +23,13 @@ jobs:
         uses: actions/setup-node@v1
       - run: npm install
       - run: npm run build
-      - run: npx next export
         env:
-          CI: true
+            CI: true
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: out/ # The folder the action should deploy.
-          clean: true # Automatically remove deleted files from the deploy branch
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: out/# The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
